# cpp_tasks

./: .gitignore
01-basic-string-operator==/: Makefile  comp_operator.cpp  comp_operator.hpp  main.cpp
01-cowstring/: CMakeLists.txt  Makefile  README.md  main.cpp  my_str_COW.hpp
01-cowstring/src/: main.cpp  my_str_COW.hpp
01-cowstring/tests/: CMakeLists.txt  test_cow.cpp
01-println-char-arrays/: README.md
01-string-twine/: CMakeLists.txt  Makefile  README.md  string_twine.hpp
01-string-twine/src/: main.cpp  string_twine.hpp
01-string-twine/tests/: CMakeLists.txt  test_stringtwine.cpp
01-testqual/: .gitignore  Makefile  README.md  lexer.l  main.cpp  my_lexer.hpp  my_testqual.cpp  my_testqual.hpp  token_type.hpp
01-testqual/tests/: test.py
02-ambiguous-overload/: README.md
02-cram/: .gitignore  Makefile  README.md  globals.cpp  globals.h  input.cram  lexer.l  main.cpp  parser.cpp  parser.hpp  parser.y
02-overload-resolution/: README.md
04-hidden-decl-temp/: README.md
04-non-full-type/: README.md
04-perm-set/: CMakeLists.txt  README.md
04-perm-set/benchmarks/: CMakeLists.txt  comp_times.cpp
04-perm-set/includes/: permset.hpp  permset_impl.hpp
04-perm-set/tests/: CMakeLists.txt  permset_test.cpp
06-constant-expressions/: README.md
06-core-CE/: README.md
06-metal-sort/: .gitignore  CMakeLists.txt  README.md  main.cpp
06-metal-sort/includes/: mysort.hpp
06-metal-sort/tests/: CMakeLists.txt  tuplesort_test.cpp
06-metaphysical-multiply/: CMakeLists.txt  README.md  main.cpp  mult.hpp
06-metaphysical-multiply/includes/: mult.hpp
06-metaphysical-multiply/tests/: CMakeLists.txt  physmult_test.cpp
